<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorInsideBackground"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_add_group_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <include layout="@layout/toolbar_with_back" />

        <TextView
            android:id="@+id/text_view_add_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/add_group"
            android:textColor="@color/colorToolbarHead"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/Aqua"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.956"
            app:layout_constraintStart_toEndOf="@+id/text_view_add_transaction"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    

    <RelativeLayout
        android:id="@+id/add_group"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_add_group_toolbar"
        app:layout_constraintVertical_bias="0.07">

        <EditText
            android:id="@+id/edit_text_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/group_name"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_below="@+id/edit_text_group_name"
            android:background="@drawable/settle_button"
            android:textColor="@color/colorPrimary"
            android:text="@string/add_friend_group"
            android:textAllCaps="false"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/ll_add_group"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_add">

        </LinearLayout>


    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>